# freestiler

./: .Rbuildignore  .gitignore  CLAUDE.md  DESCRIPTION  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  demo_mapgl.R  denton_pmtiles
.github/workflows/: python-package.yml
R/: extendr-wrappers.R  freestile.R
docs/: 404.html  CLAUDE.md  LICENSE-text.html  LICENSE.html  PYTHON_HANDOFF.md  _CLAUDE.html  _PYTHON_HANDOFF.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
docs/articles/: getting-started.html  getting-started.md  index.html  index.md  maplibre-tiles.html  maplibre-tiles.md  python.html  python.md
docs/news/: index.html  index.md
docs/reference/: freestile.html  freestile.md  freestile_file.html  freestile_file.md  freestile_layer.html  freestile_layer.md  freestile_query.html  freestile_query.md  freestiler-package.html  freestiler-package.md  freestiler.html  index.html  index.md  rust_freestile.html  rust_freestile.md  rust_freestile_duckdb.html  rust_freestile_duckdb.md  rust_freestile_duckdb_query.html  rust_freestile_duckdb_query.md  rust_freestile_file.html  rust_freestile_file.md
man/: freestile.Rd  freestile_query.Rd  rust_freestile.Rd  rust_freestile_duckdb.Rd  rust_freestile_duckdb_query.Rd  rust_freestile_file.Rd
plans/: postgis_mongo_refactor_plan.md  postgis_mongo_refactor_summary.md
python/: Cargo.toml  LICENSE.md  README.md  RELEASING.md  build.rs  pyproject.toml  setup_env.sh
python/python/freestiler/: __init__.py  _freestiler.pyi
python/scripts/: benchmark_mongo_profiles.py  verify_cli_python_mongo_parity.py  verify_installed_postgis_mongo_binding.py
python/src/: coalesce.rs  drop.rs  lib.rs  mlt.rs  pmtiles_writer.rs  tiler.rs
python/tests/: test_basic.py  test_crs.py  test_features.py  test_file_input.py  test_multilayer.py  test_postgis.py  test_postgis_wrapper.py  test_properties.py  test_query.py
reports/: 2026-04-25-高层级切片参数测试报告.md  2026-04-26-MongoProfile压测结论.md  2026-04-26-mongo-profile-benchmark.json  2026-04-26-mongo-profile-high-detail.json  2026-04-26-批量参数压测结论.md  2026-04-26-项目逻辑设计与业务图谱.md
reports/batch_tuning_2026-04-26/: recommended_b10000_mb2048.json  recommended_b10000_mb4096.json  recommended_b10000_mb8192.json  recommended_b20000_mb2048.json  recommended_b20000_mb4096.json  recommended_b20000_mb8192.json  recommended_b5000_mb2048.json  recommended_b5000_mb4096.json  recommended_b5000_mb8192.json  run_index.json
src/: Makevars.win.in
src/rust/: Cargo.toml
src/rust/freestiler-core/: Cargo.toml
src/rust/freestiler-core/src/: check_gridfs.rs  cluster.rs  coalesce.rs  duckdb_util.rs  engine.rs  error.rs  file_input.rs  lib.rs  mlt.rs  model.rs  mongo_writer.rs  mvt.rs  pmtiles_writer.rs  postgis_input.rs  streaming.rs  streaming_pipeline.rs  tile_spool.rs  tiler.rs  wkb.rs
src/rust/freestiler-core/src/postgis/: mod.rs  normalize.rs  partition.rs  reader.rs  schema.rs
src/rust/freestiler-core/src/sink/: mongo.rs
src/rust/freestiler-core/src/tileflow/: accumulator.rs  closer.rs  dispatcher.rs  finalizer.rs  mod.rs  pipeline.rs
src/rust/freestiler-core/tests/: postgis_stream_real.rs
src/rust/src/: cluster.rs  lib.rs  mlt.rs
tests/testthat/: test-clustering.R  test-coalesce.R  test-dropping.R  test-file-input.R  test-mlt.R  test-multilayer.R  test-query.R
tools/: config.R
vignettes/: _quarto.yaml  getting-started.qmd  maplibre-tiles.qmd  python.qmd
