[package]
name = "freestiler-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "_freestiler"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
geo = "0.29"
geo-types = "0.7"
geozero = { version = "0.13", features = ["with-wkb", "with-geo"] }
prost = "0.13"
pmtiles2 = "0.3"
integer-encoding = "4"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
