[package]
name = "freestiler-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "_freestiler"
crate-type = ["cdylib"]

[features]
default = ["geoparquet", "fsst"]
geoparquet = ["freestiler-core/geoparquet"]
duckdb = ["freestiler-core/duckdb"]
fastpfor = ["freestiler-core/fastpfor"]
fsst = ["freestiler-core/fsst"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
freestiler-core = { path = "../src/rust/freestiler-core" }

# Needed directly for WKB parsing and geometry type conversion
geo-types = "0.7"
geozero = { version = "0.13", features = ["with-wkb", "with-geo"] }

[profile.release]
lto = true
codegen-units = 1
