[package]
name = "freestiler-core"
version = "0.1.0"
edition = "2021"
description = "Core Rust engine for building PMTiles vector tilesets"
license = "MIT"
homepage = "https://walker-data.com/freestiler/"
documentation = "https://walker-data.com/freestiler/articles/maplibre-tiles.html"
repository = "https://github.com/walkerke/freestiler"
publish = false

[features]
default = []
geoparquet = ["dep:parquet", "dep:arrow-array", "dep:arrow-schema", "dep:geozero"]
duckdb = ["dep:duckdb", "dep:geozero"]
postgis = ["dep:postgres", "dep:geozero", "dep:native-tls", "dep:postgres-native-tls"]
mongodb-out = ["dep:mongodb", "dep:bson", "dep:tokio", "dep:once_cell", "dep:futures"]
fastpfor = ["dep:fastpfor"]
fsst = ["dep:fsst-rs"]

[dependencies]
# Geometry operations
geo = "0.29"
geo-types = "0.7"

# Protobuf encoding for MVT
prost = "0.13"

# PMTiles archive writing
pmtiles2 = "0.3"

# Varint encoding for MLT format
integer-encoding = "4"

# Gzip compression
flate2 = "1"

# JSON metadata
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallel tile encoding
rayon = "1.10"

# GeoParquet file input (optional)
parquet = { version = "57", optional = true, default-features = false, features = ["arrow", "snap"] }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }

# WKB geometry parsing (shared by geoparquet and duckdb features)
geozero = { version = "0.13", optional = true, features = ["with-wkb", "with-geo"] }

# DuckDB file input (optional)
duckdb = { version = "1.2", optional = true, features = ["bundled"] }

# Advanced MLT encodings (optional)
fastpfor = { version = "0.7", optional = true }
fsst-rs = { version = "0.5", optional = true }

# PostGIS input (optional)
postgres = { version = "0.19", optional = true }
native-tls = { version = "0.2", optional = true }
postgres-native-tls = { version = "0.5", optional = true }

# MongoDB output (optional)
mongodb = { version = "3", optional = true }
bson = { version = "2.13", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
futures = { version = "0.3", optional = true }

# Shared utilities for postgis and mongodb-out features
once_cell = { version = "1", optional = true }

# Structured logging
log = "0.4"

# Structured error types
thiserror = "2"

[dev-dependencies]
# MapLibre reference MLT decoder — used for conformance fixture tests
mlt-core = "0.1.2"
